--- a/index.html
+++ b/index.html
@@ -1,4 +1,127 @@
+<!DOCTYPE HTML>
+<html lang="en">
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125946091-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-125946091-1');
+  </script>
 
+  <meta charset="UTF-8">
+  <title>Vedasri Nakka</title>
+  <meta name="author" content="Vedasri Nakka">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>">
+</head>
+
+<body>
+  <table style="width:100%;max-width:800px;border-spacing:0px;margin:auto;">
+    <tr>
+      <td>
+        <table style="width:100%;border-spacing:0px;margin:auto;">
+          <tr>
+            <td style="padding:2.5%;width:63%;vertical-align:middle;">
+              <p style="text-align:center;">
+                <strong>Vedasri Nakka</strong>
+              </p>
+              <p>I finished my Master’s in Computer Science in September 2024 through the Swiss Joint Master of Science in Computer Science program (University of Bern, University of Neuchatel, University of Fribourg) with a grade of 5/6 and a specialization in Data Science.</p>
+
+              <p>My thesis focused on Contrastive Learning for Character Detection in Ancient Greek Papyri, under the supervision of <a href="https://icosys.ch/andreas-fischer">Prof. Andreas Fischer</a>, <a href="https://www.unifr.ch/uni/de/organisation/leitung/duplicate-of-riold2/duplicate-of-duplicate-of-prof.-rolf-ingold.html">Prof. Rolf Ingold</a>, and <a href="https://scholar.google.ch/citations?user=97uiYAoAAAAJ&hl=de">Lars Vogtlin</a>.</p>
+
+              <p>Prior to this, I earned my Bachelor’s degree in Electronic Communication Engineering from <a href="https://bvrit.ac.in/">B.V. Raju Institute of Technology</a> with 73% marks in 2016. I then spent three years at <a href="https://www.cyient.com/">Cyient</a> in Hyderabad, working on ServiceNow technology, gaining experience in administration, development, and IoT, including modules like client scripts, server-side scripts, workflows, and ITSM processes such as incident, problem, and change management.</p>
+
+              <p>Currently, I am seeking roles in Machine Learning, AI, and LLMs. I have completed various projects in Computer Vision and Machine Learning during my master's.</p>
+
+              <p style="text-align:center;">
+                <a href="mailto:vedasri.g555@gmail.com">Email</a> &nbsp;/&nbsp;
+                <a href="data/Resume_KrishnaKanthNakka.pdf">CV</a> &nbsp;/&nbsp;
+                <a href="https://github.com/VedasriNakka">GitHub</a> &nbsp;/&nbsp;
+                <a href="https://www.linkedin.com/in/vedasri-nakka-8a7865b3/">LinkedIn</a> &nbsp;/&nbsp;
+                <a href="data/Contrastive_Learning_for_Character_Detection_in_Ancient_Greek_Papyri_v3.pdf">Thesis</a> &nbsp;/&nbsp;
+                <a href="data/Thesis_final_v2.pdf">Thesis Slides</a>
+              </p>
+            </td>
+            <td style="padding:2.5%;width:40%;vertical-align:middle;">
+              <a href="images/veda_image.jpg">
+                <img style="width:100%;" alt="profile photo" src="images/veda_image.jpg">
+              </a>
+            </td>
+          </tr>
+        </table>
+
+        <table style="width:100%;border-spacing:0px;margin:auto;">
+          <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle;">
+              <h2>Projects</h2>
+              <p>During my master’s, my main focus was on data science-related courses and projects. I gained a strong understanding of core machine learning concepts and algorithms, particularly through the Pattern Recognition course, where I learned about KNN, clustering, Bayesian classification, support vector machines, and artificial neural networks. To deepen my knowledge, I also took courses such as Machine Learning, Digital Humanities, and Statistical Learning, where we explored ML topics in detail.</p>
+
+              <p>I also wrote scientific articles and co-authored a paper that was published in the <em>Informatik Spektrum Journal</em>. Additionally, I completed a project using fuzzy logic technology to recommend personalized travel destinations and studied recommendation systems to understand website and social media recommendation engines.</p>
+            </td>
+          </tr>
+        </table>
+
+        <table style="width:100%;border-spacing:0px;margin:auto;">
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle;">
+              <img src="images/simclr_method_image_v2.png" alt="SimCLR method image" width="240" height="200">
+            </td>
+            <td style="width:75%;vertical-align:middle;">
+              <h3>Contrastive Learning for Character Detection in Ancient Greek Papyri</h3>
+              <p><strong>Vedasri Nakka</strong></p>
+              <p><a href="https://www.unifr.ch/home/en/">University of Fribourg</a>, Feb 2024 - September 2024</p>
+              <p>This project evaluates SimCLR, a contrastive learning technique, in recognizing Greek letters and compares its performance with traditional supervised models. By pretraining SimCLR on a large dataset and fine-tuning it on a smaller one, I assessed the impact of different data augmentation strategies. I also explored why supervised learning models outperformed SimCLR in this specific task. Read more about my <a href="http://arxiv.org/abs/2409.10156">thesis work</a> and check the <a href="https://github.com/VedasriNakka/MS_project/tree/main">code</a>.</p>
+            </td>
+          </tr>
+        </table>
+
+        <table style="width:100%;border-spacing:0px;margin:auto;">
+          <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle;">
+              <h2>Papers</h2>
+              <h3>A Life Engineering Perspective on Algorithms, AI, Social Media, and Quantitative Metrics</h3>
+              <p>Georgiana Bigea, Nakka Vedasri, Edy Portmann, Jennifer Swaminathan, Maria Mumtaz</p>
+              <p><a href="https://www.springerprofessional.de/informatik-spektrum/5053144">Informatik Spektrum</a>, Accepted: 2 May 2024</p>
+              <p>This paper discusses the intersection of life engineering, algorithms, AI, social media, and their impact on human life. We reviewed three influential books: Cathy O'Neil's *Weapons of Math Destruction*, Kate Crawford's *Atlas of AI*, and Shoshana Zuboff's *The Age of Surveillance Capitalism*. Our analysis highlights the need for ethical technology that balances innovation with societal well-being. Read more in the <a href="https://link.springer.com/article/10.1007/s00287-024-01569-9">paper</a>.</p>
+            </td>
+          </tr>
+        </table>
+
+        <table style="width:100%;border-spacing:0px;margin:auto;">
+          <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle;">
+              <h2>Work Experience</h2>
+              <p>I have three years of experience as a ServiceNow Developer at Cyient.</p>
+              <ul>
+                <li>Proficient in integrating ServiceNow with other platforms, including ServiceNow to ServiceNow and ServiceNow to third-party tools.</li>
+                <li>Worked with modules such as update sets, notifications, web services, business rules, client scripts, reports, and script includes.</li>
+                <li>Experienced in ITSM processes like incident, change, and problem management.</li>
+                <li>Collaborated on workflows and automated processes using ServiceNow's Flow Designer and Workflow Editor.</li>
+              </ul>
+            </td>
+          </tr>
+        </table>
+
+        <table style="width:100%;border-spacing:0px;margin:auto;">
+          <tr>
+            <td style="padding:10px;text-align:right;font-size:small;">
+              <p>Credits: Webpage template from <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron</a>.</p>
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+</body>
+</html>
+
+
+
+
+<!--
 <!DOCTYPE HTML>
 <html lang="en"><head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -183,6 +306,7 @@
 </body>
 </html>
 
+-->
 
 
 
