--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
               <h3>Contrastive Learning for Character Detection in Ancient Greek Papyri</h3>
               <p><strong>Vedasri Nakka</strong></p>
               <p><a href="https://www.unifr.ch/home/en/">University of Fribourg</a>, Feb 2024 - September 2024</p>
-              <p>This project evaluates SimCLR, a contrastive learning technique, in recognizing Greek letters and compares its performance with traditional supervised models. By pretraining SimCLR on a large dataset and fine-tuning it on a smaller one, I assessed the impact of different data augmentation strategies. I also explored why supervised learning models outperformed SimCLR in this specific task. Read more about my <a href="http://arxiv.org/abs/2409.10156">thesis work</a> and check the <a href="https://github.com/VedasriNakka/MS_project/tree/main">code</a>.</p>
+	      <p><a href="http://arxiv.org/abs/2409.10156">Thesis Report</a> and <a href="https://github.com/VedasriNakka/MS_project/tree/main">code</a></p>.
+              <p>This project evaluates SimCLR, a contrastive learning technique, in recognizing Greek letters and compares its performance with traditional supervised models. By pretraining SimCLR on a large dataset and fine-tuning it on a smaller one, I assessed the impact of different data augmentation strategies. I also explored why supervised learning models outperformed SimCLR in this specific task. </p>
             </td>
           </tr>
         </table>
@@ -122,6 +123,7 @@
 
 
 <!--
+
 <!DOCTYPE HTML>
 <html lang="en"><head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -167,7 +169,7 @@
 
 <p>Currently, I am seeking roles in Machine Learning, AI, and LLMs. I have completed various projects in Computer Vision and Machine Learning during my Masters </p> <!-- and am prepared for roles in these areas. -->
 
-
+-->
 <!--
                 I graduated with a PhD in Computer Science in August 2022 from the Computer Vision Lab at EPFL.
    I was supervised by <a href="https://people.epfl.ch/cgi-bin/people?id=119864&op=bio&lang=en&cvlang=en">Dr. Mathieu Salzmann</a> and <a href="https://people.epfl.ch/pascal.fua/bio?lang=en">Prof. Pascal Fua</a> in the areas of computer vision and deep learning.</p>
@@ -181,7 +183,7 @@
  <p>I'm currently working in the Privacy Team, Trustworthy Technology Lab at Huawei Munich Research Center focusing on the privacy of Large Language Models and Auto ML techniques for Differentially Private Federated Learning algorithms.</p>
 
 -->
-		      
+<!--		      
 </p>
 
             </p>
