--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
             <td style="width:75%;vertical-align:middle;">
               <h3>Contrastive Learning for Character Detection in Ancient Greek Papyri</h3>
               <p><strong>Vedasri Nakka</strong></p>
-              <p><a href="https://www.unifr.ch/home/en/">University of Fribourg</a>, Feb 2024 - September 2024</p>
-	      <p><a href="http://arxiv.org/abs/2409.10156">Thesis Report</a> and <a href="https://github.com/VedasriNakka/MS_project/tree/main">code</a></p>.
+              <p><a href="https://www.unifr.ch/home/en/">University of Fribourg</a>, Feb 2024 - September 2024. <a href="http://arxiv.org/abs/2409.10156">Thesis Report</a> and <a href="https://github.com/VedasriNakka/MS_project/tree/main">code</a></p>
               <p>This project evaluates SimCLR, a contrastive learning technique, in recognizing Greek letters and compares its performance with traditional supervised models. By pretraining SimCLR on a large dataset and fine-tuning it on a smaller one, I assessed the impact of different data augmentation strategies. I also explored why supervised learning models outperformed SimCLR in this specific task. </p>
             </td>
           </tr>
@@ -122,193 +121,6 @@
 
 
 
-<!--
-
-<!DOCTYPE HTML>
-<html lang="en"><head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125946091-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-125946091-1');
-</script>
-
-
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-  <title>Vedasri Nakka</title>
-
-  <meta name="author" content="Vedasri Nakka">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
-	<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>">
-</head>
-
-
-<body>
-  <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-    <tr style="padding:0px">
-      <td style="padding:0px">
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr style="padding:0px">
-            <td style="padding:2.5%;width:63%;vertical-align:middle">
-              <p style="text-align:center">
-                <name>Vedasri Nakka</name>
-              </p>
-              <p>
-
-<p>I finished my Master’s in Computer Science in September 2024 through the Swiss Joint Master of Science in Computer Science program (University of Bern, University of Neuchatel, University of Fribourg) with a grade of 5/6 and specialization in Data Science.</p>
-
-<p>My thesis focused on Contrastive Learning for Character Detection in Ancient Greek Papyri, under the supervision of <a href="https://icosys.ch/andreas-fischer">Prof. Andreas Fischer</a>, <a href="https://www.unifr.ch/uni/de/organisation/leitung/duplicate-of-riold2/duplicate-of-duplicate-of-prof.-rolf-ingold.html">Prof. Rolf Ingold</a>, and <a href="https://scholar.google.ch/citations?user=97uiYAoAAAAJ&hl=de">Lars Vogtlin</a>.</p>
-
-<p>Prior to this, I earned my Bachelor’s degree in Electronic Communication Engineering from<a href="https://bvrit.ac.in/"> B.V. Raju Institute of Technology</a> with 73% marks in 2016. I then spent three years at <a href="https://www.cyient.com/">Cyient</a> in Hyderabad, working on ServiceNow technology, gaining experience in administration, development, and IoT, including modules like client scripts, server-side scripts, workflows, and ITSM processes such as incident, problem, and change management.</p>
-
-<p>Currently, I am seeking roles in Machine Learning, AI, and LLMs. I have completed various projects in Computer Vision and Machine Learning during my Masters </p> <!-- and am prepared for roles in these areas. -->
-
--->
-<!--
-                I graduated with a PhD in Computer Science in August 2022 from the Computer Vision Lab at EPFL.
-   I was supervised by <a href="https://people.epfl.ch/cgi-bin/people?id=119864&op=bio&lang=en&cvlang=en">Dr. Mathieu Salzmann</a> and <a href="https://people.epfl.ch/pascal.fua/bio?lang=en">Prof. Pascal Fua</a> in the areas of computer vision and deep learning.</p>
-
-<p>Following the completion of my Ph.D., I worked as a postdoctoral scientist at the Visual Intelligence for Transportation Lab (VITA) at EPFL under the supervision of <a href="https://people.epfl.ch/alexandre.alahi?lang=en">Prof. Alexandre Alahi</a> until April 2023.</p>
-
-<p>Before joining EPFL in 2017, I spent two years at <a href="https://research.samsung.com/sri-b">Samsung Research Bangalore</a> working on mobile camera algorithms. Prior to that, I graduated from the Department of Electrical Engineering at <a href="http://www.iitkgp.ac.in/">IIT Kharagpur</a> in 2015 with a Dual degree (Masters and Bachelors).</p>
-
-<p>During my undergraduate years, I interned at the <a href="https://www.ualberta.ca/computing-science/index.html">University of Alberta</a>, <a href="https://www.google.com/search?q=cai+uq&oq=CAI+uq&aqs=chrome.0.0i512j0i22i30j0i15i22i30j0i22i30l3j0i390l4.2150j0j4&sourceid=chrome&ie=UTF-8University">the University of Queensland</a>, and <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs/bangalore.html">Philips Research</a>.
-
- <p>I'm currently working in the Privacy Team, Trustworthy Technology Lab at Huawei Munich Research Center focusing on the privacy of Large Language Models and Auto ML techniques for Differentially Private Federated Learning algorithms.</p>
-
--->
-<!--		      
-</p>
-
-            </p>
-            <p>
-            
-              </p>
-              <p style="text-align:center">
-                <a href="mailto:vedasri.g555@gmail.com">Email</a> &nbsp/&nbsp
-                <a href="data/Resume_KrishnaKanthNakka.pdf">CV</a> &nbsp/&nbsp
-              <!--  <a href="https://scholar.google.com/citations?user=g_21RKoAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp -->
-                <a href="https://github.com/VedasriNakka">Github</a>&nbsp/&nbsp
-                <a href="https://www.linkedin.com/in/vedasri-nakka-8a7865b3/">LinkedIn</a>&nbsp/&nbsp
-                <a href="data/Contrastive_Learning_for_Character_Detection_in_Ancient_Greek_Papyri_v3.pdf">Thesis</a> &nbsp/&nbsp
-                <a href="data/Thesis_final_v2.pdf">Thesis Slides</a>
-
-
-              </p>
-            </td>
-            <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/veda_image.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/veda_image.jpg" class="hoverZoomLink"></a>
-            </td>
-          </tr>
-        </tbody></table>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-            <tr>
-            <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>Projects</heading>
-<p>During my master’s, my main focus was on data science-related courses and projects. I gained a strong understanding of core machine learning concepts and algorithms, particularly through the Pattern Recognition course, where I learned about KNN, clustering, Bayesian classification, support vector machines, and artificial neural networks. To deepen my knowledge, I also took courses such as Machine Learning, Digital Humanities, and Statistical Learning, where we explored ML topics in detail.</p>
-
-<p>Additionally, I read papers on machine learning during seminars and wrote scientific articles. One of the papers I co-authored in the Seminar Public Services course was published in the <em>Informatik Spektrum Journal</em>.</p>
-
-<p>In the Fuzzy System course, I completed a project that utilized fuzzy logic technology to recommend personalized travel destinations by analyzing user responses. I also studied Recommendation Systems, which helped me understand how recommendation engines on websites and social media platforms function. </p> <!-- Besides these, I took additional courses that were not directly related to ML. -->
-
-	
-            </td>
-          </tr>
-        </tbody></table>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-
-
-          <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/simclr_method_image_v2.png" alt="teaser" width="240" height="200">
-            </td>
-            <td width="75%" valign="middle">
-              <papertitle>  Contrastive Learning for Character Detection in Ancient Greek Papyri </papertitle>
-              </a>
-               <br>
-              <strong>Vedasri Nakka</strong>
-              <p><a href="https://www.unifr.ch/home/en/"> University of Fribourg</a>, Feb 2024 - September 2024 </p> 
-              <br>
-              <p>The main objective of this project is to evaluate the effectiveness of SimCLR, a contrastive learning technique, in recognizing Greek letters and compare its performance against traditional supervised models using cross-entropy and triplet loss functions. By pretraining SimCLR on a large dataset and fine-tuning on a smaller dataset, the study aims to assess the impact of different data augmentation strategies on SimCLR’s performance. Additionally, the project explores why traditional supervised learning models outperform SimCLR in this specific letter recognition task My <a href="http://arxiv.org/abs/2409.10156">Thesis work </a> and <a href="https://github.com/VedasriNakka/MS_project/tree/main"> code. </a> </p>
-
-            </td>
-          </tr>
-	</tbody>
-      </table>
-
-
-
-
-	
-<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-  <tbody>
-    <tr>
-      <td style="padding:20px;width:100%;vertical-align:middle">
-        <heading>Papers</heading>
-</br></br>
-        <papertitle>A life engineering perspective on algorithms, AI, social media, and quantitative metrics</papertitle>
-	<p>Georgiana Bigea, Nakka Vedasri, Edy Portmann, Jennifer Swaminathan, Maria Mumtaz</p>
-	<p><a href="https://www.springerprofessional.de/informatik-spektrum/5053144"> Informatik Spektrum</a>, Accepted: 2 May 2024 </p>
-        
-	<p>This academic paper explores the intersection of life engineering, algorithms, AI, social media, and their impact on human life, through reviews of three influential books. 
-		Cathy O'Neil's "Weapons of Math Destruction" reveals how algorithms can reinforce biases and discrimination, calling for ethical oversight in automated systems. 
-		Kate Crawford's "Atlas of AI" expands on AI's broader effects, including labor exploitation and environmental damage, urging responsible AI development. 
-		Shoshana Zuboff's "The Age of Surveillance Capitalism" critiques how tech giants monetize personal data, eroding privacy and challenging democracy. 
-		This <a href="https://link.springer.com/article/10.1007/s00287-024-01569-9"> paper </a> emphasizes the need for ethical technology that balances innovation with societal well-being. </p>
-      </td>
-    </tr>
-  </tbody>
-</table>
-
-
-
-<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-  <tbody>
-    <tr>
-      <td style="padding:20px;width:100%;vertical-align:middle">
-        <heading>Working Experience</heading>
-        <p>I have three years of working experience as a ServiceNow Developer in Cyient company.</p>
-        <ul>
-          <li>Proficient in integrating ServiceNow with other platforms, including ServiceNow to ServiceNow and ServiceNow to third-party tools.</li>
-          <li>Worked extensively with modules such as update sets, notifications, web services, business rules, client scripts, reports, and script includes.</li>
-          <li>Hands-on experience with ITSM processes like incident management, change management, and problem management.</li>
-          <li>Collaborated with teams to implement workflows and automate processes using ServiceNow's Flow Designer and Workflow Editor.</li>
-        </ul>
-
-
-      </td>
-    </tr>
-  </tbody>
-</table>
-  
-
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr>
-            <td style="padding:10px">
-              <br>
-              <p style="text-align:right;font-size:small;">
-                Credits: Webpage template from <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron</a>.
-              </p>
-            </td>
-          </tr>
-        </tbody></table>
-
-
-      </td>
-    </tr>
-  </table>
-
-
-</body>
-</html>
-
--->
 
 
 
