--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
               <h2>Projects</h2>
               <p>During my master’s, my main focus was on data science-related courses and projects. I gained a strong understanding of core machine learning concepts and algorithms, particularly through the Pattern Recognition course, where I learned about KNN, clustering, Bayesian classification, support vector machines, and artificial neural networks. To deepen my knowledge, I also took courses such as Machine Learning, Digital Humanities, and Statistical Learning, where we explored ML topics in detail.</p>
 
-              <p>I also wrote scientific articles and co-authored a paper that was published in the <em>Informatik Spektrum Journal</em>. Additionally, I completed a project using fuzzy logic technology to recommend personalized travel destinations and studied recommendation systems to understand website and social media recommendation engines.</p>
-            </td>
+	      <p>Additionally, I read papers on machine learning during seminars and wrote scientific articles. One of the papers I co-authored in the Seminar Public Services course was published in the <em>Informatik Spektrum Journal</em>.</p>
+
+	      <p>In the Fuzzy System course, I completed a project that utilized fuzzy logic technology to recommend personalized travel destinations by analyzing user responses. I also studied Recommendation Systems, which helped me understand how recommendation engines on websites and social media platforms function. </p>            
+	    </td>
           </tr>
         </table>
 
@@ -71,7 +73,6 @@
             </td>
             <td style="width:75%;vertical-align:middle;">
               <h3>Contrastive Learning for Character Detection in Ancient Greek Papyri</h3>
-              <p><strong>Vedasri Nakka</strong></p>
               <p><a href="https://www.unifr.ch/home/en/">University of Fribourg</a>, Feb 2024 - September 2024. <a href="http://arxiv.org/abs/2409.10156">Thesis Report</a> and <a href="https://github.com/VedasriNakka/MS_project/tree/main">code</a></p>
               <p>This project evaluates SimCLR, a contrastive learning technique, in recognizing Greek letters and compares its performance with traditional supervised models. By pretraining SimCLR on a large dataset and fine-tuning it on a smaller one, I assessed the impact of different data augmentation strategies. I also explored why supervised learning models outperformed SimCLR in this specific task. </p>
             </td>
