--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <tr>
             <td style="padding:2.5%;width:63%;vertical-align:middle;">
               <p style="text-align:center;">
-                <strong>Vedasri Nakka</strong>
+                <name>Vedasri Nakka</name>
               </p>
               <p>I finished my Master’s in Computer Science in September 2024 through the Swiss Joint Master of Science in Computer Science program (University of Bern, University of Neuchatel, University of Fribourg) with a grade of 5/6 and a specialization in Data Science.</p>
 
