--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a href="data/Resume_KrishnaKanthNakka.pdf">CV</a> &nbsp;/&nbsp;
                 <a href="https://github.com/VedasriNakka">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/vedasri-nakka-8a7865b3/">LinkedIn</a> &nbsp;/&nbsp;
-                <a href="data/Contrastive_Learning_for_Character_Detection_in_Ancient_Greek_Papyri_v3.pdf">Thesis</a> &nbsp;/&nbsp;
+                <a href="https://www.arxiv.org/abs/2409.10156">Thesis Report</a> &nbsp;/&nbsp;
                 <a href="data/Thesis_final_v2.pdf">Thesis Slides</a>
               </p>
             </td>
@@ -57,7 +57,7 @@
           <tr>
             <td style="padding:20px;width:100%;vertical-align:middle;">
               <h2>Projects</h2>
-              <p>During my master’s, my main focus was on data science-related courses and projects. I gained a strong understanding of core machine learning concepts and algorithms, particularly through the Pattern Recognition course, where I learned about KNN, clustering, Bayesian classification, support vector machines, and artificial neural networks. To deepen my knowledge, I also took courses such as Machine Learning, Digital Humanities, and Statistical Learning, where we explored ML topics in detail.</p>
+              <p>During my master’s, my main focus was on data science-related courses and projects. I gained a strong understanding of core Machine Learning concepts and algorithms, particularly through the Pattern Recognition course, where I learned about KNN, Clustering, Bayesian classification, Support Vector Machines, and Artificial Neural Networks. To deepen my knowledge, I also took courses such as Machine Learning, Digital Humanities, and Statistical Learning, where we explored ML topics in detail.</p>
 
 	      <p>Additionally, I read papers on machine learning during seminars and wrote scientific articles. One of the papers I co-authored in the Seminar Public Services course was published in the <em>Informatik Spektrum Journal</em>.</p>
 
@@ -72,7 +72,7 @@
               <img src="images/simclr_method_image_v2.png" alt="SimCLR method image" width="240" height="200">
             </td>
             <td style="width:75%;vertical-align:middle;">
-              <a href="https://arxiv.org/abs/1901.02229">
+              <a href="https://www.arxiv.org/abs/2409.10156">
                 <papertitle>Contrastive Learning for Character Detection in Ancient Greek Papyri</papertitle>
               </a>
               <br>
