--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                 <papertitle>Contrastive Learning for Character Detection in Ancient Greek Papyri</papertitle>
               </a>
               <br>
-		    <a href="https://www.unifr.ch/home/en/">University of Fribourg</a>, Feb 2024 - September 2024. <a href="http://arxiv.org/abs/2409.10156">Thesis Report</a> and <a href="https://github.com/VedasriNakka/MS_project/tree/main">code</a>
+		    <a href="https://www.unifr.ch/home/en/">University of Fribourg</a>, Feb 2024 - September 2024. 
+		    <a href="http://arxiv.org/abs/2409.10156">Thesis Report</a> and <a href="https://github.com/VedasriNakka/MS_project/tree/main">code</a>
               <p>This project evaluates SimCLR, a contrastive learning technique, in recognizing Greek letters and compares its performance with traditional supervised models. By pretraining SimCLR on a large dataset and fine-tuning it on a smaller one, I assessed the impact of different data augmentation strategies. I also explored why supervised learning models outperformed SimCLR in this specific task. </p>
             </td>
           </tr>
