--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               </p>
               <p>I finished my Master’s in Computer Science in September 2024 through the Swiss Joint Master of Science in Computer Science program (University of Bern, University of Neuchatel, University of Fribourg) with a grade of 5/6 and a specialization in Data Science.</p>
 
-              <p>My thesis focused on Contrastive Learning for Character Detection in Ancient Greek Papyri, under the supervision of <a href="https://icosys.ch/andreas-fischer">Prof. Andreas Fischer</a>, <a href="https://www.unifr.ch/uni/de/organisation/leitung/duplicate-of-riold2/duplicate-of-duplicate-of-prof.-rolf-ingold.html">Prof. Rolf Ingold</a>, and <a href="https://scholar.google.ch/citations?user=97uiYAoAAAAJ&hl=de">Lars Vogtlin</a>.</p>
+              <p>My thesis focused on Contrastive Learning for Character Detection in Ancient Greek Papyri, under the supervision of <a href="https://scholar.google.com/citations?user=-HlcweoAAAAJ&hl=en">Prof. Andreas Fischer</a>, <a href="https://www.unifr.ch/uni/de/organisation/leitung/duplicate-of-riold2/duplicate-of-duplicate-of-prof.-rolf-ingold.html">Prof. Rolf Ingold</a>, and <a href="https://scholar.google.ch/citations?user=97uiYAoAAAAJ&hl=de">Lars Vogtlin</a>.</p>
 
               <p>Prior to this, I earned my Bachelor’s degree in Electronic Communication Engineering from <a href="https://bvrit.ac.in/">B.V. Raju Institute of Technology</a> with 73% marks in 2016. I then spent three years at <a href="https://www.cyient.com/">Cyient</a> in Hyderabad, working on ServiceNow technology, gaining experience in administration, development, and IoT, including modules like client scripts, server-side scripts, workflows, and ITSM processes such as incident, problem, and change management.</p>
 
@@ -77,6 +77,7 @@
               </a>
               <br>
 		    <a href="https://www.unifr.ch/home/en/">University of Fribourg</a>, Feb 2024 - September 2024. 
+	      <br>
 		    <a href="http://arxiv.org/abs/2409.10156">Thesis Report</a> and <a href="https://github.com/VedasriNakka/MS_project/tree/main">code</a>
               <p>This project evaluates SimCLR, a contrastive learning technique, in recognizing Greek letters and compares its performance with traditional supervised models. By pretraining SimCLR on a large dataset and fine-tuning it on a smaller one, I assessed the impact of different data augmentation strategies. I also explored why supervised learning models outperformed SimCLR in this specific task. </p>
             </td>
@@ -87,8 +88,9 @@
           <tr>
             <td style="padding:20px;width:100%;vertical-align:middle;">
               <h2>Papers</h2>
-              <h3>A Life Engineering Perspective on Algorithms, AI, Social Media, and Quantitative Metrics</h3>
-              <p>Georgiana Bigea, Nakka Vedasri, Edy Portmann, Jennifer Swaminathan, Maria Mumtaz</p>
+	      <a href="https://link.springer.com/article/10.1007/s00287-024-01569-9">
+              	<papertitle>A Life Engineering Perspective on Algorithms, AI, Social Media, and Quantitative Metrics</papertitle>
+              <be><a href="https://www.linkedin.com/in/georgiana-bigea-b903a58a/">Georgiana Bigea</a>, <strong>Nakka Vedasri</strong>, <a href="https://scholar.google.com/citations?user=igCBMdQAAAAJ&hl=en">Edy Portmann</a>, <a href="https://www.linkedin.com/in/jennifer-swaminathan-a7451213/?originalSubdomain=ch">Jennifer Swaminathan</a>, <a href="https://www.linkedin.com/in/maria-mumtaz-34470124/?locale=de_DE">Maria Mumtaz</a>
               <p><a href="https://www.springerprofessional.de/informatik-spektrum/5053144">Informatik Spektrum</a>, Accepted: 2 May 2024</p>
               <p>This paper discusses the intersection of life engineering, algorithms, AI, social media, and their impact on human life. We reviewed three influential books: Cathy O'Neil's *Weapons of Math Destruction*, Kate Crawford's *Atlas of AI*, and Shoshana Zuboff's *The Age of Surveillance Capitalism*. Our analysis highlights the need for ethical technology that balances innovation with societal well-being. Read more in the <a href="https://link.springer.com/article/10.1007/s00287-024-01569-9">paper</a>.</p>
             </td>
