--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
               <h2>Papers</h2>
 	      <a href="https://link.springer.com/article/10.1007/s00287-024-01569-9">
               	<papertitle>A Life Engineering Perspective on Algorithms, AI, Social Media, and Quantitative Metrics</papertitle>
-              <br><a href="https://www.linkedin.com/in/georgiana-bigea-b903a58a/">Georgiana Bigea</a>, <strong>Nakka Vedasri</strong>, <a href="https://scholar.google.com/citations?user=igCBMdQAAAAJ&hl=en">Edy Portmann</a>, <a href="https://www.linkedin.com/in/jennifer-swaminathan-a7451213/?originalSubdomain=ch">Jennifer Swaminathan</a>, <a href="https://www.linkedin.com/in/maria-mumtaz-34470124/?locale=de_DE">Maria Mumtaz</a>
+		<br>
+		      Georgiana Bigea, Vedasri Nakka, Prof. Edy Portmann, Jennifer Swaminathan, Maria Mumtaz
+              <!-- <br><a href="https://www.linkedin.com/in/georgiana-bigea-b903a58a/">Georgiana Bigea</a>, <strong>Nakka Vedasri</strong>, <a href="https://scholar.google.com/citations?user=igCBMdQAAAAJ&hl=en">Edy Portmann</a>, <a href="https://www.linkedin.com/in/jennifer-swaminathan-a7451213/?originalSubdomain=ch">Jennifer Swaminathan</a>, <a href="https://www.linkedin.com/in/maria-mumtaz-34470124/?locale=de_DE">Maria Mumtaz</a> -->
               <br><a href="https://www.springerprofessional.de/informatik-spektrum/5053144">Informatik Spektrum</a>, Accepted: 2 May 2024
               <p>This paper discusses the intersection of life engineering, algorithms, AI, social media, and their impact on human life. We reviewed three influential books: Cathy O'Neil's "Weapons of Math Destruction", Kate Crawford's "Atlas of AI", and Shoshana Zuboff's "The Age of Surveillance Capitalism". Our analysis highlights the need for ethical technology that balances innovation with societal well-being. Read more in the <a href="https://link.springer.com/article/10.1007/s00287-024-01569-9">paper</a>.</p>
             </td>
