--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle;">
               <h2>Papers</h2>
 	      <a href="https://link.springer.com/article/10.1007/s00287-024-01569-9">
-              	<papertitle>A Life Engineering Perspective on Algorithms, AI, Social Media, and Quantitative Metrics</papertitle>
+              	<papertitle>A Life Engineering Perspective on Algorithms, AI, Social Media, and Quantitative Metrics</papertitle></a>
 		<br>
 		      Georgiana Bigea, Vedasri Nakka, Prof. Edy Portmann, Jennifer Swaminathan, Maria Mumtaz
                 <br>
