--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <papertitle>Contrastive Learning for Character Detection in Ancient Greek Papyri</papertitle>
               </a>
               <br>
-		    <a href="https://www.unifr.ch/home/en/">University of Fribourg</a>, Feb 2024 - September 2024. 
+		    <a href="https://www.unifr.ch/home/en/">University of Fribourg</a>, Feb 2024 - Sep 2024
 	      <br>
 		    <a href="http://arxiv.org/abs/2409.10156">Thesis Report</a> and <a href="https://github.com/VedasriNakka/MS_project/tree/main">Code</a>
               <p>This project evaluates SimCLR, a contrastive learning technique, in recognizing Greek letters and compares its performance with traditional supervised models. By pretraining SimCLR on a large dataset and fine-tuning it on a smaller one, I assessed the impact of different data augmentation strategies. I also explored why supervised learning models outperformed SimCLR in this specific task. </p>
@@ -91,7 +91,7 @@
 	      <a href="https://link.springer.com/article/10.1007/s00287-024-01569-9">
               	<papertitle>A Life Engineering Perspective on Algorithms, AI, Social Media, and Quantitative Metrics</papertitle></a>
 		<br>
-		      Georgiana Bigea, Maria Mumtaz, Prof. Edy Portmann, Jennifer Swaminathan, <em>Vedasri Nakka</em>
+		      Georgiana Bigea, Maria Mumtaz, Prof. Edy Portmann, Jennifer Swaminathan, <strong>Vedasri Nakka</strong>
                 <br>
 		      <a href="https://www.springerprofessional.de/informatik-spektrum/5053144">Informatik Spektrum</a>, Accepted: 2 May 2024
               <p>This paper discusses the intersection of life engineering, algorithms, AI, social media, and their impact on human life. We reviewed three influential books: Cathy O'Neil's "Weapons of Math Destruction", Kate Crawford's "Atlas of AI", and Shoshana Zuboff's "The Age of Surveillance Capitalism". Our analysis highlights the need for ethical technology that balances innovation with societal well-being. Read more in the <a href="https://link.springer.com/article/10.1007/s00287-024-01569-9">paper</a>.</p>
