--- a/index.html
+++ b/index.html
@@ -84,10 +84,30 @@
           </tr>
         </table>
 
+
+	<table style="width:100%;border-spacing:0px;margin:auto;">
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle;">
+              <img src="images/simclr_method_image_v2.png" alt="SimCLR method image" width="240" height="200">
+            </td>
+            <td style="width:75%;vertical-align:middle;">
+              <a href="https://www.arxiv.org/abs/2409.10156">
+                <papertitle>Contrastive Learning for Character Detection in Ancient Greek Papyri</papertitle>
+              </a>
+              <br>
+		    <a href="https://www.unifr.ch/home/en/">University of Fribourg</a>, Feb 2024 - Sep 2024
+	      <br>
+		    <a href="http://arxiv.org/abs/2409.10156">Thesis Report</a> and <a href="https://github.com/VedasriNakka/MS_project/tree/main">Code</a>
+              <p>This project evaluates SimCLR, a contrastive learning technique, in recognizing Greek letters and compares its performance with traditional supervised models. By pretraining SimCLR on a large dataset and fine-tuning it on a smaller one, I assessed the impact of different data augmentation strategies. I also explored why supervised learning models outperformed SimCLR in this specific task. </p>
+            </td>
+          </tr>
+        </table>
+	      
+
         <table style="width:100%;border-spacing:0px;margin:auto;">
           <tr>
             <td style="padding:20px;width:100%;vertical-align:middle;">
-              <h2>Papers</h2>
+              <h2>Publications</h2>
 	      <a href="https://link.springer.com/article/10.1007/s00287-024-01569-9">
               	<papertitle>A Life Engineering Perspective on Algorithms, AI, Social Media, and Quantitative Metrics</papertitle></a>
 		<br>
