--- a/index.html
+++ b/index.html
@@ -88,17 +88,13 @@
 	<table style="width:100%;border-spacing:0px;margin:auto;">
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle;">
-              <img src="images/simclr_method_image_v2.png" alt="SimCLR method image" width="240" height="200">
+              <img src="images/adv_image.png" alt="Adversarial image activates background prototypes" width="240" height="200">
             </td>
             <td style="width:75%;vertical-align:middle;">
-              <a href="https://www.arxiv.org/abs/2409.10156">
-                <papertitle>Contrastive Learning for Character Detection in Ancient Greek Papyri</papertitle>
-              </a>
+              <h3>Seminar Explainable AI - Adversarial AttacksMeets Interpretability </h3>
               <br>
-		    <a href="https://www.unifr.ch/home/en/">University of Fribourg</a>, Feb 2024 - Sep 2024
-	      <br>
-		    <a href="http://arxiv.org/abs/2409.10156">Thesis Report</a> and <a href="https://github.com/VedasriNakka/MS_project/tree/main">Code</a>
-              <p>This project evaluates SimCLR, a contrastive learning technique, in recognizing Greek letters and compares its performance with traditional supervised models. By pretraining SimCLR on a large dataset and fine-tuning it on a smaller one, I assessed the impact of different data augmentation strategies. I also explored why supervised learning models outperformed SimCLR in this specific task. </p>
+		    <a href="https://www.unifr.ch/home/en/">University of Fribourg</a>, Feb 2021 - Jun 2021
+              <p>In this seminar project, we explore the vulnerabilities of Convolutional Neural Networks (CNNs) to adversarial attacks, which introduce subtle noise to input images. By examining interpretable CNNs, we analyze how these attacks succeed and visualize the resulting changes in discriminative regions. Utilizing networks like VGG16, Attention Pooling, and Prototypical Networks, we leverage techniques such as Class Activation Mapping (CAM) to interpret CNN decisions on the CUB dataset under various gradient-based adversarial attacks.</p>
             </td>
           </tr>
         </table>
