--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
             </td>
             <td style="width:75%;vertical-align:middle;">
               <h3>Seminar Explainable AI - Adversarial AttacksMeets Interpretability </h3>
-		 <br>   
-		    <a href="https://www.unifr.ch/home/en/">University of Fribourg</a>, Feb 2021 - Jun 2021
+		   <p> <a href="https://www.unifr.ch/home/en/">University of Fribourg</a>, Feb 2021 - Jun 2021 </p>
               <p>In this seminar project, we explore the vulnerabilities of Convolutional Neural Networks (CNNs) to adversarial attacks, which introduce subtle noise to input images. By examining interpretable CNNs, we analyze how these attacks succeed and visualize the resulting changes in discriminative regions. Utilizing networks like VGG16, Attention Pooling, and Prototypical Networks, we leverage techniques such as Class Activation Mapping (CAM) to interpret CNN decisions on the CUB dataset under various gradient-based adversarial attacks.</p>
             </td>
           </tr>
