--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
               <p style="text-align:center;">
                 <a href="mailto:vedasri.g555@gmail.com">Email</a> &nbsp;/&nbsp;
-                <a href="data/VedasriNakkaResume_v2.pdf">CV</a> &nbsp;/&nbsp;
+                <a href="data/VedasriNakkaResume.pdf">CV</a> &nbsp;/&nbsp;
                 <a href="https://github.com/VedasriNakka">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/vedasri-nakka-8a7865b3/">LinkedIn</a> &nbsp;/&nbsp;
                 <a href="https://www.arxiv.org/abs/2409.10156">Thesis Report</a> &nbsp;/&nbsp;
